# ChangeLog for games-strategy/wesnoth
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-strategy/wesnoth/ChangeLog,v 1.243 2015/04/08 22:46:10 mr_bones_ Exp $

  08 Apr 2015; Michael Sterrett <mr_bones_@gentoo.org> -wesnoth-1.10.7.ebuild:
  old

  25 Feb 2015; Agostino Sarubbo <ago@gentoo.org> wesnoth-1.12.1.ebuild:
  Stable for x86, wrt bug #541106

  24 Feb 2015; Agostino Sarubbo <ago@gentoo.org> wesnoth-1.12.1.ebuild:
  Stable for amd64, wrt bug #541106

  26 Jan 2015; Michael Sterrett <mr_bones_@gentoo.org>
  -files/wesnoth-1.12-cmake.patch, -wesnoth-1.12.ebuild:
  old

*wesnoth-1.12.1 (24 Jan 2015)

  24 Jan 2015; Michael Sterrett <mr_bones_@gentoo.org> +wesnoth-1.12.1.ebuild:
  version bump

  20 Jan 2015; Michael Sterrett <mr_bones_@gentoo.org>
  +files/wesnoth-1.12-cmake.patch, wesnoth-1.12.ebuild:
  fix build with USE=dedicated

*wesnoth-1.12 (13 Jan 2015)

  13 Jan 2015; Michael Sterrett <mr_bones_@gentoo.org> +wesnoth-1.12.ebuild,
  metadata.xml:
  version bump (bug #530642)

  31 Dec 2013; Michael Sterrett <mr_bones_@gentoo.org>
  -files/wesnoth-1.10.4-boost.patch, -wesnoth-1.10.4.ebuild,
  -wesnoth-1.10.6.ebuild:
  old

  24 Dec 2013; Agostino Sarubbo <ago@gentoo.org> wesnoth-1.10.7.ebuild:
  Stable for x86, wrt bug #490648

  22 Dec 2013; Agostino Sarubbo <ago@gentoo.org> wesnoth-1.10.7.ebuild:
  Stable for ppc64, wrt bug #490648

  21 Dec 2013; Agostino Sarubbo <ago@gentoo.org> wesnoth-1.10.7.ebuild:
  Stable for ppc, wrt bug #490648

  13 Nov 2013; Tony Vroon <chainsaw@gentoo.org> wesnoth-1.10.7.ebuild:
  Marked stable on AMD64 based on arch testing by Elijah "Armageddon" El
  Lazkani in bug #490648.

  13 Sep 2013; Patrick Lauer <patrick@gentoo.org> wesnoth-1.10.7.ebuild:
  Whitespace

  12 Sep 2013; Michael Sterrett <mr_bones_@gentoo.org> wesnoth-1.10.7.ebuild:
  respect LINGUAS (bug #483316)

  26 Aug 2013; Michael Sterrett <mr_bones_@gentoo.org> -wesnoth-1.10.5.ebuild:
  old
