@@ -1,5 +1,7 @@
 AUX wesnothd.rc 619 SHA256 23e250272768e1fb540104b96c96a24da09fedc9f89a6867adcae046160c0065 SHA512 b9f08d1e026ef8e970e8c7eb1533b91b9185917697bacf874970108f515b4d8af5ebc9a4ff2335f1fb19c37ca6fd281bd7153e773bcace22acf7f0772d2beb43 WHIRLPOOL fd35eeb82f6b15663194e28f301452753d8d0892df2f516dac7d579629978d5804fb277d930b0dcedf219fcd28f5389f8f6b89fd25a858c2402be4d1c19b788c
 DIST wesnoth-1.12.1.tar.bz2 384386961 SHA256 70404764370db05e496a4e033e09c26cdc47fa6558271d803a44c4ebb7b6efe8 SHA512 6b0904c90414dbd90d3916f129611ed2630940dd47cd217c929c5a93afd04e6bd9e16b7e3e8185888ae2347f5994acbcc31622a29403e932161f3f8c86223589 WHIRLPOOL 99e7c301c354b545f5c6fa7c28f39465e2806c3b09074b4ecf50aa027f47c491605944519236d0557d24af4facb1b08520b46edbfdab1bbd670b687a4bd0ec5c
+DIST wesnoth-1.12.2.tar.bz2 392234446 SHA256 1f4f76e5fd0ce175a3eb7b9855aff7a58dc75899c534d7653d97ac9fd4fe798b SHA512 023df596da0cbcc53d44a91a56635c9f31cfc2f3f4315c4029b44084c07ba838d22a10e378f14fab0c27dd1befe6e1a4d9e2c92ef47890748a30d36c9355c590 WHIRLPOOL cd65d622afad67d96acb3df33841740f2db25e8850addfc979a4b63b79b959699810be9ffc0df855453fc92e385ac27f52db4db6222d66ef2b94c9ed0a6aa911
 EBUILD wesnoth-1.12.1.ebuild 3199 SHA256 e1c63c0181a527ddf0295bf1a55531b0927c0e59f91123d5493356ee95469866 SHA512 55352b865a67a1d60515693107265652dd8893401b4104af9ec0198a4aedd651b409968341676858c6f68fdaed2edda9e4cfd0a052712fc1b4f70eff0ffeed7e WHIRLPOOL 85c082a8c24af437f8b350c8f753e40903f5811be81a833fd9b170c3c214b32572bd6f54598cba1167c19abf693b4ce7791fb23000d8e70974653e28c553ede0
-MISC ChangeLog 31017 SHA256 e69a590c71f690d445a3dc2f254dd2a9d5b092a7129159f20723ccd8acc1cfb9 SHA512 9a5097d1fee0952554a43829dc339c5ade1df700eff55ed9291379383ef6b28f24a1287d9ac76a1c70dd4b709312b479ef5c62acb3f1d966a6b8568e18dde6b6 WHIRLPOOL 2e2432ae47629f466235576d7e423a4af7ad0dad36db3dc45ef4110bb70c2a984f1edbe471f06b214f2a179ffab0ed7f86395fe898943784f8073335ea979970
+EBUILD wesnoth-1.12.2.ebuild 3207 SHA256 c97c8de189b2c078cf00dbf59437667e2e657cb0a3168c1dd4d0b4de9e06b3e5 SHA512 9a21549f52c19333870d03ded8212b90ab99cd4a502976b859d0f7e64d58ba26fe73b1d4603cac2e2bc31a536aee01c9ff0d0a92442c747ffb248d13e43c4f99 WHIRLPOOL 19405b8867f2364ec5f6ee59404acaa5d32256a2daa031b32fb577d23f2a00e5447b7f0f1818c6c5e81bbb8b452a8060af9209cfe1714dce58f12ad47e2cccf1
+MISC ChangeLog 31143 SHA256 fd129479697a784b67b8c92286e58b02e94377b6ad672313be201462f89a5c0a SHA512 23d6affece3a869a97ba178a4aced389f6a103623656860784c36c75ad841564e3c063fc796470a320718e754a2f00045b8b9228e65b188b39d8510df02fd3c3 WHIRLPOOL 1688be84d9091047bb42af381ba20a23283402d8e49dc2aa29d95757bbb3f95a25af879585c9dcf259c8c39ea5ce80fd656c6bb96106af6860eea97dcd3cf308
 MISC metadata.xml 302 SHA256 afd1ff335c3bb72bc79f1dd4129c02ef626dbc6014a707eee751423617c7ea95 SHA512 748c7f5671781c960c364a103fc1a8ecc1a0816f2096ced4a67cda1fd19506387845fc76b1b52af226147797ba08edc8a335beec0febaded243efadfc2e31f9e WHIRLPOOL a654cec8b79da00f18046a8fcf5755603bf9dcff2be8abfd0b869d3afa659dfbd78964388a5ae425aae30ff621119895c649eaef421db5fbc4bb08f7c6c835b9
