@@ -1,6 +1,11 @@
 # ChangeLog for games-strategy/wesnoth
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/wesnoth/ChangeLog,v 1.243 2015/04/08 22:46:10 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/wesnoth/ChangeLog,v 1.244 2015/04/09 01:59:16 mr_bones_ Exp $
+
+*wesnoth-1.12.2 (09 Apr 2015)
+
+  09 Apr 2015; Michael Sterrett <mr_bones_@gentoo.org> +wesnoth-1.12.2.ebuild:
+  version bump
 
   08 Apr 2015; Michael Sterrett <mr_bones_@gentoo.org> -wesnoth-1.10.7.ebuild:
   old
